# unsub

./: .gitignore  README.md  pyproject.toml
unsub/: api_util.py  gmail.py  link.py  spam.py  unsub_agent.py  unsub_link.py
unsub/cmd/: list_unsub_links.py  run_agent.py  run_agent_many.py  run_simulations.py  view_chat.py
unsub/cmd/view_chat_assets/: script.js  style.css
unsub/simulations/: __init__.py  base.py  fandango.py  goldbelly.py  honeywell.py  peco.py  single_step.py  static.py
unsub/simulations/assets/: 404.html  bryant_park.html  click_to_unsub.html  enter_email.html  enter_email.js  fandango.html  simple_1.html  staysubscribed.html  updated.html
unsub/simulations/assets/goldbelly/: homepage.html  index.html  style.css
unsub/simulations/assets/honeywell/: index.html
unsub/simulations/assets/honeywell/files/: PreferenceCenterHon.css
unsub/simulations/assets/peco/: index.html
